# Volt

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  volt.benchmark.config.mjs  volt.test.config.mjs
crates/volt-core/: Cargo.toml
crates/volt-core/src/: app.rs  clipboard.rs  command.rs  dialog.rs  embed.rs  fs.rs  global_shortcut.rs  grant_store.rs  ipc.rs  lib.rs  menu.rs  notification.rs  permissions.rs  plugin_grant_registry.rs  security.rs  shell.rs  tray.rs  updater.rs  watcher.rs  webview.rs  window.rs
crates/volt-core/src/app/: command_handling.rs  event_loop.rs  window_management.rs
crates/volt-core/src/app/command_handling/: cleanup.rs  dispatch.rs  hotkeys.rs  menu.rs  obs.rs
crates/volt-core/src/app/event_loop/: command_batch.rs  native_events.rs  user_events.rs
crates/volt-core/src/app/tests/: command_dispatch.rs  config.rs  event_types.rs  mod.rs  window_management.rs
crates/volt-core/src/command/: bridge.rs  error.rs  tests.rs  types.rs
crates/volt-core/src/embed/: bundle.rs  fs.rs  serve.rs  tests.rs
crates/volt-core/src/fs/: helpers.rs  mod.rs  resolve.rs  scoped.rs  tests.rs
crates/volt-core/src/ipc/: protocol.rs  rate_limit.rs  security.rs  tests.rs  webview.rs
crates/volt-core/src/menu/: accelerator.rs  build.rs  tests.rs  types.rs
crates/volt-core/src/security/: mod.rs  validation.rs
crates/volt-core/src/updater/: config.rs  http.rs  platform.rs  tests.rs  util.rs  verification.rs
crates/volt-core/src/webview/: config.rs  policy.rs
crates/volt-core/src/window/: build.rs  config.rs  handle.rs  tests.rs
crates/volt-core/tests/: embed_integration.rs  ipc_integration.rs  security_fs_integration.rs
crates/volt-napi/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
crates/volt-napi/loader/: musl.js  native-loader-helpers.js  native-loader-targets.js  native-loader.js  wasi-loader.js
crates/volt-napi/src/: app.rs  clipboard.rs  dialog.rs  fs.rs  global_shortcut.rs  ipc.rs  lib.rs  logging.rs  menu.rs  notification.rs  permissions.rs  shell.rs  tray.rs  updater.rs  window.rs
crates/volt-napi/src/app/: bridge.rs  config.rs  runtime.rs  tests.rs
crates/volt-plugin-host/: Cargo.toml
crates/volt-plugin-host/src/: config.rs  engine.rs  ipc.rs  main.rs  runtime_state.rs
crates/volt-plugin-host/src/engine/: tests.rs
crates/volt-plugin-host/src/ipc/: event_loop.rs  framing.rs  message.rs  mod.rs
crates/volt-plugin-host/src/modules/: mod.rs
crates/volt-plugin-host/src/runtime_state/: tests.rs
crates/volt-runner/: Cargo.toml  build.rs
crates/volt-runner/assets/: default-config.json
crates/volt-runner/src/: ipc_bridge.rs  js_runtime.rs  js_runtime_pool.rs  logging.rs  main.rs  plugin_manager.rs
crates/volt-runner/src/ipc_bridge/: dispatch.rs  in_flight.rs  mod.rs  request_validation.rs  response.rs  tests.rs  worker_pool.rs
crates/volt-runner/src/js_runtime/: bootstrap.rs  eval_ops.rs  ipc.rs  native_events.rs  requests.rs  serde_support.rs  tests.rs  worker.rs
crates/volt-runner/src/js_runtime_pool/: benchmark_tests.rs  client.rs  rate_limiter.rs  tests.rs
crates/volt-runner/src/modules/: dialog_async.rs  event_helpers.rs  mod.rs  module_registry.rs  runtime_state.rs  runtime_values.rs  secure_storage.rs  test_utils.rs  volt_clipboard.rs  volt_crypto.rs  volt_db.rs  volt_dialog.rs  volt_events.rs  volt_fs.rs  volt_global_shortcut.rs  volt_http.rs  volt_ipc.rs  volt_menu.rs  volt_notification.rs  volt_os.rs  volt_plugins.rs  volt_secure_storage.rs  volt_shell.rs  volt_tray.rs  volt_updater.rs  volt_watcher.rs  volt_window.rs
crates/volt-runner/src/plugin_manager/: access.rs  contracts.rs  discovery.rs  host_api.rs  host_api_access.rs  host_api_fs.rs  host_api_helpers.rs  host_api_storage.rs  host_api_support.rs  lifecycle.rs  lifecycle_bus.rs  manifest.rs  mod.rs  paths.rs  tests.rs  watchdog.rs
crates/volt-runner/src/runner/: assets.rs  config.rs  fs.rs  mod.rs  overrides.rs
crates/volt-updater-helper/: Cargo.toml
crates/volt-updater-helper/src/: logging.rs  main.rs
crates/volt-updater-helper/src/updater/: apply.rs  args.rs  mod.rs  platform.rs
(+300 files in other folders)
