[package]
name = "volt-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
devtools = ["wry/devtools"]

[dependencies]
wry = "0.54"
tao = "0.34"
tray-icon = "0.21"
muda = "0.17"
rfd = "0.17"
arboard = "3"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
thiserror = "2"
log = "0.4"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
base64 = "0.22"
semver = "1"
global-hotkey = "0.7"
dirs = "6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[dev-dependencies]
proptest = "1"
