[package]
name = "volt-plugin-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "volt-plugin-host"
path = "src/main.rs"

[dependencies]
volt-core = { path = "../volt-core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
boa_engine = { version = "0.21", features = ["intl_bundled"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
