[package]
name = "volt-plugin-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "volt-plugin-host"
path = "src/main.rs"

[dependencies]
volt-permissions = { path = "../volt-permissions" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
boa_engine = { version = "0.21", features = ["intl_bundled"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
