[package]
name = "volt-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
volt-core = { path = "../volt-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.34"
wry = "0.54"
boa_engine = { version = "0.21", features = ["intl_bundled"] }
tokio = { version = "1", features = ["rt", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
sha2 = "0.10"
base64 = "0.22"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.33", features = ["bundled"] }
num_cpus = "1"
self-replace = "1"
crossbeam-channel = "0.5"
keyring = "3.6"
semver = "1"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
